# MTCNNDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wangxingxing/mymtcnndemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
app/src/main/java/com/wangxingxing/mymtcnndemo/: App.java  GifSizeFilter.java  MTCNN.java  MainActivity.java  Test.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/wangxingxing/mymtcnndemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
